--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ after_success:
   # Login to docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Push images to docker hub
-  - docker push bandzior-git/multi-client
-  - docker push bandzior-git/multi-nginx
-  - docker push bandzior-git/multi-server
-  - docker push bandzior-git/multi-worker
+  - docker push bandzior/multi-client
+  - docker push bandzior/multi-nginx
+  - docker push bandzior/multi-server
+  - docker push bandzior/multi-worker
