--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,16 @@ services:
   - docker
 
 before_install:
-  - docker build -t bandzior-git/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t bandzior/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true bandzior-git/react-test npm test
+  - docker run -e CI=true bandzior/react-test npm test
 
 after_success:
-  - docker build -t bandzior-git/multi-client ./client
-  - docker build -t bandzior-git/multi-nginx ./nginx
-  - docker build -t bandzior-git/multi-server ./server
-  - docker build -t bandzior-git/multi-worker ./worker
+  - docker build -t bandzior/multi-client ./client
+  - docker build -t bandzior/multi-nginx ./nginx
+  - docker build -t bandzior/multi-server ./server
+  - docker build -t bandzior/multi-worker ./worker
   # Login to docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Push images to docker hub
