--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,15 @@ after_success:
   - docker push bandzior/multi-nginx
   - docker push bandzior/multi-server
   - docker push bandzior/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'eu-central-1'
+  app: 'multi-docker'
+  env: 'Multidocker-env'
+  bucket_name: 'elasticbeanstalk-eu-central-1-236066717621'
+  bucket_path: 'docker-multi'
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
