--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
     version: "3"
     services:
       client:
-        image: "bandzior"
+        image: "bandzior/multi-client"
         mem_limit: 128m
         hostname: client
       server:
