--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 sudo: required
-language: generic 
+language: generic
+
 services:
   - docker
 
@@ -14,9 +15,9 @@ after_success:
   - docker build -t bandzior/multi-nginx ./nginx
   - docker build -t bandzior/multi-server ./server
   - docker build -t bandzior/multi-worker ./worker
-  # Login to docker CLI
+  # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  # Push images to docker hub
+  # Take those images and push them to docker hub
   - docker push bandzior/multi-client
   - docker push bandzior/multi-nginx
   - docker push bandzior/multi-server
