--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,31 @@
-    version: "3"
-    services:
-      client:
-        image: "bandzior/multi-client"
-        mem_limit: 128m
-        hostname: client
-      server:
-        image: "bandzior/multi-server"
-        mem_limit: 128m
-        hostname: api
-        environment:
-          - REDIS_HOST=$REDIS_HOST
-          - REDIS_PORT=$REDIS_PORT
-          - PGUSER=$PGUSER
-          - PGHOST=$PGHOST
-          - PGDATABASE=$PGDATABASE
-          - PGPASSWORD=$PGPASSWORD
-          - PGPORT=$PGPORT
-      worker:
-        image: "bandzior/multi-worker"
-        mem_limit: 128m
-        hostname: worker
-        environment:
-          - REDIS_HOST=$REDIS_HOST
-          - REDIS_PORT=$REDIS_PORT
-      nginx:
-        image: "bandzior/multi-nginx"
-        mem_limit: 128m
-        hostname: nginx
-        ports:
-          - "80:80"
+version: "3"
+services:
+  client:
+    image: "bandzior/multi-client"
+    mem_limit: 128m
+    hostname: client
+  server:
+    image: "cbandzior/multi-server"
+    mem_limit: 128m
+    hostname: api
+    environment:
+      - REDIS_HOST=$REDIS_HOST
+      - REDIS_PORT=$REDIS_PORT
+      - PGUSER=$PGUSER
+      - PGHOST=$PGHOST
+      - PGDATABASE=$PGDATABASE
+      - PGPASSWORD=$PGPASSWORD
+      - PGPORT=$PGPORT
+  worker:
+    image: "bandzior/multi-worker"
+    mem_limit: 128m
+    hostname: worker
+    environment:
+      - REDIS_HOST=$REDIS_HOST
+      - REDIS_PORT=$REDIS_PORT
+  nginx:
+    image: "cbandzior/multi-nginx"
+    mem_limit: 128m
+    hostname: nginx
+    ports:
+      - "80:80"
